# furever_match

./: .env.example  .gitignore  DELIVERY_CHECKLIST.md  FILE_STRUCTURE_V2.md  FRONTEND_SETUP.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INDEX_V2.md  MATCHING_GUIDE.md  MATCHING_V2_COMPLETE.md  MATCHING_V2_GUIDE.md  QUICK_START.md  README_STRUCTURE.md  SAMPLE_DATA_GUIDE.md  START_HERE.md  STITCH_INTEGRATION.md  UI_INTEGRATION_EXAMPLE.py  WHERE_TO_PASTE.md  examples_matching.py  frontend_stitch.txt  graph_viz.ipynb  insert_sample_requests.py  match_graph.html  pipeline.py  pyproject.toml  run.py  setup.py  test_insert.py  test_match.py
.claude/: settings.local.json
docs/: RTL_STRATEGY.md
frontend/: PASTE_STITCH_CODE_HERE.html  app.js  dog-profile.html  index.html  quiz-activity.html  quiz-home.html  quiz-prefs.html  quiz-story.html  results.html  styles.css  welcome.html
frontend/js/: adoption-service.js  matching-service.js  stitch-client.js  ui-manager.js
furever_match/: __init__.py  config.py  db_ingestion.py  extractor.py  llm.py  main.py  matcher.py  matching.py  matching_integration.py  matching_integration_v2.py  matching_rules.yaml  matching_v2.py  models.py  scorer.py  scraper.py  utils.py
furever_match/graphs/: __init__.py  match_graph.py
tests/: test_db_ingestion.py  test_main.py  test_matching.py  test_matching_v2.py
