[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "furever-match"
version = "0.1.0"
description = "An app to match forever homes for pets"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "google-generativeai>=0.4.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "supabase>=2.0",
    "python-dotenv>=1.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/furever_match"
