[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "furever-match"
version = "0.1.0"
description = "An app to match forever homes for pets"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    # Add your dependencies here
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "httpx>=0.28.1",
    "hypergraph",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/furever_match"

[tool.uv.sources]
hypergraph = { git = "https://github.com/gilad-rubin/hypergraph.git" }
